--- a/Notebook/model_testing.ipynb
+++ b/Notebook/model_testing.ipynb
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-25 14:18:29.859042: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-05-24 14:18:57.957395: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1748182709.884449    2140 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1748182709.892320    2140 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-05-25 14:18:29.921320: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1748096337.990581    6828 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1748096338.000667    6828 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-05-24 14:18:58.034473: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -26,11 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "90d72ac6-b0eb-4a1c-8286-eca2eb2a6545",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers\n",
     "from tensorflow.keras.layers import Dropout, BatchNormalization\n",
     "\n",
     "def build_cnn_lstm_model():\n",
@@ -111,7 +113,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1748182714.122778    2140 gpu_device.cc:2022] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2248 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1650, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
+      "I0000 00:00:1748096343.137818    6828 gpu_device.cc:2022] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2248 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1650, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
      ]
     }
    ],
@@ -128,8 +130,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -139,21 +140,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the datasets\n",
-    "X1 = np.load(\"input_media.npy\")   # Shape: (samples1, 24, 1)\n",
-    "Y1 = np.load(\"out_media.npy\")     # Shape: (samples1, 24)\n",
-    "X2 = np.load(\"input.npy\") # Shape: (samples2, 24, 1)\n",
-    "Y2 = np.load(\"out.npy\")   # Shape: (samples2, 24)\n",
-    "\n",
-    "# Concatenate along the first axis (number of samples)\n",
-    "X_combined = np.concatenate((X1, X2), axis=0)\n",
-    "Y_combined = np.concatenate((Y1, Y2), axis=0)"
+    "X=np.load(\"input.npy\")\n",
+    "Y=np.load(\"out.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b947dbb9-f0cb-463e-81c1-618793c3f2ad",
+   "execution_count": 8,
+   "id": "f014c443-dec2-4c59-b9dd-7b7529bbbd20",
    "metadata": {
     "scrolled": true
    },
@@ -161,29 +155,29 @@
     {
      "data": {
       "text/plain": [
-       "array([[[129.51707451],\n",
-       "        [129.75986121],\n",
-       "        [129.75986121],\n",
+       "array([[[117.54315336],\n",
+       "        [117.54315336],\n",
+       "        [117.2005136 ],\n",
        "        ...,\n",
-       "        [130.60593834],\n",
-       "        [130.00177458],\n",
-       "        [130.01250866]],\n",
+       "        [117.29173759],\n",
+       "        [117.62220746],\n",
+       "        [117.62220746]],\n",
        "\n",
-       "       [[129.98844356],\n",
-       "        [129.97351108],\n",
-       "        [130.45717293],\n",
+       "       [[117.540685  ],\n",
+       "        [117.540685  ],\n",
+       "        [117.61534145],\n",
        "        ...,\n",
-       "        [128.9816    ],\n",
-       "        [128.2174466 ],\n",
-       "        [127.99740305]],\n",
+       "        [119.32458413],\n",
+       "        [119.57043436],\n",
+       "        [119.57043436]],\n",
        "\n",
-       "       [[127.97649758],\n",
-       "        [128.05176593],\n",
-       "        [128.16763331],\n",
+       "       [[119.91978626],\n",
+       "        [119.91978626],\n",
+       "        [119.79420653],\n",
        "        ...,\n",
-       "        [128.49357484],\n",
-       "        [127.99792244],\n",
-       "        [128.56791369]],\n",
+       "        [121.21410458],\n",
+       "        [121.21410458],\n",
+       "        [121.21410458]],\n",
        "\n",
        "       ...,\n",
        "\n",
@@ -212,45 +206,47 @@
        "        [ 99.84978095]]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_combined"
+    "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a2b6119a-543e-4928-b60b-73263c03b7ba",
-   "metadata": {},
+   "execution_count": 9,
+   "id": "b947dbb9-f0cb-463e-81c1-618793c3f2ad",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 98],\n",
-       "       [ 98],\n",
-       "       [ 98],\n",
+       "array([[ 75],\n",
+       "       [ 75],\n",
+       "       [ 75],\n",
        "       ...,\n",
        "       [100],\n",
        "       [ 99],\n",
        "       [ 99]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Y_combined"
+    "Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "1215bb7f-d757-4f6c-9521-c07a60434f94",
    "metadata": {},
    "outputs": [],
@@ -261,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "4969a48d-87a8-4b37-83a9-36630416ce07",
    "metadata": {
     "scrolled": true
@@ -279,45 +275,96 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1748182761.310039    2210 service.cc:148] XLA service 0x7fae500cfe40 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
-      "I0000 00:00:1748182761.310318    2210 service.cc:156]   StreamExecutor device (0): NVIDIA GeForce GTX 1650, Compute Capability 7.5\n",
-      "2025-05-25 14:19:21.477329: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
-      "I0000 00:00:1748182762.308726    2210 cuda_dnn.cc:529] Loaded cuDNN version 90300\n"
+      "I0000 00:00:1748096349.990816    6901 service.cc:148] XLA service 0x7ff88c014620 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1748096349.990879    6901 service.cc:156]   StreamExecutor device (0): NVIDIA GeForce GTX 1650, Compute Capability 7.5\n",
+      "2025-05-24 14:19:10.186899: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "I0000 00:00:1748096351.211809    6901 cuda_dnn.cc:529] Loaded cuDNN version 90300\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m 5/95\u001b[0m \u001b[32m━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m2s\u001b[0m 32ms/step - loss: 95.4816 - mae: 95.4816"
+      "\u001b[1m 3/35\u001b[0m \u001b[32m━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m1s\u001b[0m 36ms/step - loss: 85.3319 - mae: 85.3319 "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1748182771.061888    2210 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+      "I0000 00:00:1748096358.024095    6901 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m95/95\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 102ms/step - loss: 80.9505 - mae: 80.9505 - val_loss: 147.6571 - val_mae: 147.6571\n",
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 330ms/step - loss: 82.1833 - mae: 82.1833 - val_loss: 88.4598 - val_mae: 88.4598\n",
       "Epoch 2/200\n",
-      "\u001b[1m95/95\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 13ms/step - loss: 17.4005 - mae: 17.4005 - val_loss: 16.5829 - val_mae: 16.5829\n",
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 17ms/step - loss: 32.8650 - mae: 32.8650 - val_loss: 63.2908 - val_mae: 63.2908\n",
       "Epoch 3/200\n",
-      "\u001b[1m95/95\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 12ms/step - loss: 15.6528 - mae: 15.6528 - val_loss: 14.1943 - val_mae: 14.1943\n",
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 18ms/step - loss: 12.5121 - mae: 12.5121 - val_loss: 47.6820 - val_mae: 47.6820\n",
       "Epoch 4/200\n",
-      "\u001b[1m95/95\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 15ms/step - loss: 15.9648 - mae: 15.9648 - val_loss: 13.9922 - val_mae: 13.9922\n",
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 19ms/step - loss: 12.8333 - mae: 12.8333 - val_loss: 45.6010 - val_mae: 45.6010\n",
       "Epoch 5/200\n",
-      "\u001b[1m95/95\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 15ms/step - loss: 16.0691 - mae: 16.0691 - val_loss: 15.7440 - val_mae: 15.7440\n"
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 20ms/step - loss: 15.9943 - mae: 15.9943 - val_loss: 26.8553 - val_mae: 26.8553\n",
+      "Epoch 6/200\n",
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 18ms/step - loss: 11.2175 - mae: 11.2175 - val_loss: 29.3290 - val_mae: 29.3290\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x7faf2ed875e0>"
+       "<keras.src.callbacks.history.History at 0x7ff97e9cea00>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X,Y,epochs=200,callbacks=callback,validation_split=0.3)\n",
+    "# model1.fit(X,Y,epochs=200,callbacks=callback,validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9154fbd1-bd09-48e7-81dd-575349c63e4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1560, 24, 1)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d4b8add4-d661-4438-a862-62aed134c6d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 75],\n",
+       "       [ 75],\n",
+       "       [ 75],\n",
+       "       ...,\n",
+       "       [100],\n",
+       "       [ 99],\n",
+       "       [ 99]])"
       ]
      },
      "execution_count": 13,
@@ -326,38 +373,17 @@
     }
    ],
    "source": [
-    "model.fit(X_combined,Y_combined,epochs=200,callbacks=callback,validation_split=0.3)\n",
-    "# model1.fit(X,Y,epochs=200,callbacks=callback,validation_split=0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9154fbd1-bd09-48e7-81dd-575349c63e4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4b8add4-d661-4438-a862-62aed134c6d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fd6d031a-f8c7-44d0-89c0-46f4bce353e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.save(\"bpm_model_media.keras\")"
+    "# model.save(\"bpm_model.keras\")"
    ]
   },
   {
