--- a/Notebook/feature_2.ipynb
+++ b/Notebook/feature_2.ipynb
@@ -2236,7 +2236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mideapipe",
+   "display_name": "flask_env",
    "language": "python",
    "name": "python3"
   },
@@ -2250,7 +2250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
